@@ -1,3 +1,7 @@
+2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* JavaScript minification is enabled in FE by default (config.minifyJS=1)
+
 2007-09-25  Oliver Hader  <oh@inpublica.de>
 
 	* (tweak) Created new directory for Services_JSON typo3/contrib/json/ and moved file from typo3/contrib/json.php to typo3/contrib/json/json.php
